// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should render as an icon button 1`] = `
preact-render-spy (1 nodes)
-------
<button
  class="button icon"
  onClick={[Function mockConstructor]}
>
  <span class="buttonFocusIndicator"></span>
  Stuff
</button>

`;

exports[`Button component should render as primary button 1`] = `
preact-render-spy (1 nodes)
-------
<button
  class="button primary"
  onClick={[Function mockConstructor]}
>
  <span class="buttonFocusIndicator"></span>
  Stuff
</button>

`;

exports[`Button component should render correctly 1`] = `
preact-render-spy (1 nodes)
-------
<button
  class="button"
  onClick={[Function mockConstructor]}
>
  <span class="buttonFocusIndicator"></span>
  Stuff
</button>

`;

exports[`Button component should render with an aria label 1`] = `
preact-render-spy (1 nodes)
-------
<button
  class="button"
  onClick={[Function mockConstructor]}
  aria-label="label"
>
  <span class="buttonFocusIndicator"></span>
  Stuff
</button>

`;
